[package]
name = "captains-log"
version = "0.3.0"
edition = "2021"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["development-tools::debugging"]
repository = "https://github.com/NaturalIO/captains-log"
documentation = "https://docs.rs/captains-log"
keywords = ["logger", "logging", "log"]
license = "BSD-1-Clause"
description = """
A light-weight customizable logger which have concurrency in mind.
Allow for multi-process/thread/coroutine programing,
and can change log setting on the fly.
"""

[dependencies]
log = { version = "0.4", features = ["std", "kv_unstable"] }
signal-hook = { version = "0" }
libc = { version= "0" }
chrono = "0.4"
parking_lot = "0"
backtrace = "0.3"
captains-log-helper = "0.1.0"
exitcode = "1"
lazy_static = "1.4"
arc-swap = "1"
enum_dispatch = "0.3"
regex = "1"

[dev-dependencies]
fmutex = "0"
