[package]
name = "captains-log"
version = "0.8.3"
edition = "2018"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["development-tools::debugging"]
repository = "https://github.com/NaturalIO/captains-log"
documentation = "https://docs.rs/captains-log"
keywords = ["logger", "logging", "log", "syslog"]
license = "MIT"
description = """
A light-weight customizable logger which have concurrency in mind.
Allow for multi-process/thread/coroutine programing,
and can change log setting on the fly.
"""

[dependencies]
log = { version = "0.4", features = ["std", "kv_unstable"] }
signal-hook = { version = "0" }
libc = { version= "0" }
chrono = "0.4"
parking_lot = "0"
backtrace = "0.3"
captains-log-helper = "0.3.1"
exitcode = "1"
arc-swap = "1"
enum_dispatch = "0.3"
regex = "1"
crossfire = "2.0"
file-rotate = "0.8"
flate2 = "1.0"
syslog = { version = "7.0", optional = true }
ring-file = { version = "0.1", optional = true}

[features]
default = []
syslog = ["dep:syslog"]
ringfile=["dep:ring-file"]

[dev-dependencies]
fmutex = "0"
rstest = "0"
tokio = { version="1", features = ["rt-multi-thread", "macros"]}

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
