[package]
name = "captains-log"
version = "0.16.0"
edition = "2018"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["development-tools::debugging"]
repository = "https://github.com/NaturalIO/captains-log"
documentation = "https://docs.rs/captains-log"
keywords = ["logger", "logging", "log", "syslog"]
license = "MIT"
description = """
A minimalist customizable logger for rust,
 based on the `log` crate, but also adapted to `tracing`,
for production and testing scenario.
"""

[dependencies]
log = { version = "0.4.33", features = ["std", "kv"] }
signal-hook = { version = "0" }
libc = { version= "0" }
chrono = "0.4"
parking_lot = "0"
backtrace = "0.3"
captains-log-helper = "0.3.1"
exitcode = "1"
arc-swap = "1"
enum_dispatch = "0.3"
regex = "1"
crossfire = ">=3.0"
file-rotate = "0.8"
flate2 = "1.0"
syslog = { version = "7.0", optional = true }
ring-file = { version = "0.3.0", optional = true}
tracing-subscriber = {version="0.3", optional=true, features = ["registry"] }
tracing = {version="0.1", optional=true}

[features]
default = []
syslog = ["dep:syslog"]
ringfile=["dep:ring-file"]
tracing=["dep:tracing", "dep:tracing-subscriber"]

[dev-dependencies]
fmutex = "0"
rstest = "0"
tokio = { version="1", features = ["rt-multi-thread", "macros"]}
tracing-subscriber = {version="0.3", features = ["registry", "fmt"] }

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
new_ret_no_self = "allow"
needless_range_loop = "allow"
type_complexity = "allow"
needless_return = "allow"
mut_from_ref = "allow"
transmute_ptr_to_ref = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
result_unit_err = "allow"
collapsible_else_if = "allow"
collapsible_match = "allow"
test_attr_in_doctest="allow"
from_over_into = "allow"
