[package]
name = "captains-log-helper"
version = "0.1.0"
authors = ["plan <frostyplanet@gmail.com>"]
edition = "2021"
description = "Procedural Macros for logging for tests"

[dependencies]
darling = "0.10.0"
proc-macro2 = "1"
syn = { version = "1.0.5", features = ["full"] }
quote = "1"

[dev-dependencies]
log = "0.4"

[lib]
proc-macro = true
doctest = false
