[package]
name = "captains-log-helper"
version = "0.3.1"
authors = ["plan <frostyplanet@gmail.com>"]
edition = "2021"
description = "Procedural Macros for logging for tests"
homepage = "https://github.com/NaturalIO/captains-log"
documentation = "https://docs.rs/captains-log"
license = "BSD-1-Clause"

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"

[dev-dependencies]
log = "0.4"
captains-log = "0.4"
rstest = "0"
tokio = { version = "1", features = ["time", "rt", "macros"] }
async-trait = "0"

[lib]
proc-macro = true
doctest = false
